# LostRiverPhishing

./: README.md  manifest.json  pyproject.toml
Collab code and the datasets for the final assignments/: CyberSecurity_Final_Project_Spam_Detection_for_email.ipynb
popup/: popup.css  popup.html
python_backend/: Email_checker_subject.ipynb  emailchecker.py  pyproject.toml
