[tool.poetry]
name = "lostriverphishing"
version = "0.1.0"
description = "This is a tool for detecting phishing and other malicious aspects of an email"
authors = ["Ralph McHugh <mchuralp@isu.edu>, Pratham Khanal <prathamkhanal@isu.edu>, Sansar Kharal <sansarkharal@isu.edu>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
